# AdapterSlots

./: .gitignore  README.md  REPRODUCE.md  environment.yml  pyproject.toml  requirements.txt
adapter_slots/: __init__.py  buffer.py  config.py
backends/: __init__.py  backend_adapterslots.py  backend_dlora.py  backend_punica.py  backend_slora.py  backend_vllm.py  base.py
benchmarks/: metrics_collector.py  process_utils.py
docker/: Dockerfile  Dockerfile.eval  Dockerfile.serve  dev_enter.sh  docker-compose.yml  entrypoint.sh  requirements_docker.txt
docs/: multi_gpu_correctness.md  results.md  theorem_appendix_verification.md
envs/: adapter_env.yml
gpu_setup/: Two_H100_NVLink_setup.txt  Two_RTX_A6000_PCIe_setup.txt
hw_profiles/: a6000_tp2.json  h100_tp1.json  h100_tp2.json
scripts/: add_docker_pkg.sh  assign_adapters.py  benchmark_quantized_vs_fp16.py  download_datasets.py  download_models.py  gen_adapters.py  generate_workload.py  kv_stress_test.py  measure_kernel_anchors.py  preprocess_burstgpt.py  profile_kernel.py  replay_harness.py  run_ablations.py  run_claims.py  run_sota.py  serve_batch.py  serving_utils.py  test_fused_layer_correctness.py  test_lora_kernel_fusion.py  test_pp_correctness.py  test_quantized_model_correctness.py  test_tp_correctness.py  vllm_serve_adapter_slots.py  vllm_serve_adapterslots.py  workload_gen.py
tests/: test_bench_harness.py  test_buffer.py  test_deferred.py  test_erlang.py  test_halign.py  test_memory_bound.py  test_pattern_generator.py  test_prefetch.py  test_prefetch_scheduler.py  test_tp_transparency.py  test_war.py  (+2 more)
(+194 files in other folders)
