[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapter_slots"
version = "0.1.0"
description = "AdapterSlots: warp-aligned LoRA adapter serving for LLM inference"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "torch>=2.2",
    "transformers>=4.40",
    "peft>=0.9",
    "tqdm>=4.66",
    "rich>=13.7",
    "prometheus-client>=0.20",
    "jsonlines>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "pytest-cov>=5.0"]
serving = ["vllm>=0.4.0", "fastapi>=0.110", "uvicorn[standard]"]
flashinfer = ["flashinfer-python>=0.1.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["adapter_slots*", "backends*", "benchmarks*", "workloads*"]
